<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SoftpymesApp 2.4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SoftPymes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Cerrar_Sesion">Cerrar Sesion</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_buscar_clientes">Buscar Clientes</string>
    <string name="menu_buscar_lista_clientes">Lista de Clientes</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_cobradores">Cobradores</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_mercancia">Mercancias</string>
    <string name="menu_config">Configuraciones</string>
    <string name="menu_compras">Compras</string>
    <string name="menu_Pagos">Pagos</string>
    <string name="menu_prestamos">Prestamos</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_vendedores">Vendedores</string>
    <string name="menu_ventas">Ventas</string>
    <string name="titulo">Softpymes 2.4</string>
    <string name="titulo1">Nuevo Cliente</string>
    <string name="titulo2">Buscar Cliente</string>
    <string name="titulo3">Lista de Clientes</string>
    <string name="titulo4">Actualizar Cliente</string>
    <string name="titulo5">Pagos</string>
    <string name="titulo6">Nueva Mercancia</string>
    <string name="titulo7">Actualizar Mercancia</string>
    <string name="titulo8">Nuevo Cobrador</string>
    <string name="titulo9">Actualizar Cobrador</string>
    <string name="titulo10">Cobradores</string>
    <string name="titulo11">Mercancias</string>
    <string name="titulo12">Vendedores</string>
    <string name="titulo13">Clientes</string>
    <string name="titulo14">Usuarios</string>
    <string name="titulo15">Nuevo Vendedor</string>
    <string name="titulo16">Actualizar Vendedor</string>
    <string name="titulo17">Nuevo Usuario</string>
    <string name="titulo18">Actualizar Usuario</string>
    <string name="titulo19">Ventas</string>
    <string name="titulo20">Ventas Personalizadas</string>
    <string name="titulo21">Productos/Mercancias</string>
    <string name="titulo22">Inventario</string>
    <string name="titulo23">Inicio</string>
    <string name="titulo24">Pagos</string>
    <string name="lblidcliente">lblidcl</string>
    <string name="lblcliente">lblcliente</string>
    <string name="lblcelular">lblcelular</string>
    <string name="lbleditar">lbleditar</string>
    <string name="lbleliminar">lbeliminar</string>
    <string name="label_usuario">Nombre de Usuario</string>
    <string name="label_password">Contraseña</string>
    <string name="label_start_session">Iniciar Sesión</string>
    <string name="label_nuevoUser"><u>Nuevo Usuario ? Registrarme Ahora</u></string>
    <string name="label_olvide_password">Olvide mi contraseña ?</string>
    <string name="label_bienvenida">Identifíquese para iniciar sesión</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="lblidcl">Id Cliente: </string>
    <string name="lblidcl1">Id Cliente </string>
    <string name="lblced1">Cedula: </string>
    <string name="lblced2">Cedula </string>
    <string name="lblcl1">Cliente: </string>
    <string name="lblcl2">Cliente  </string>
    <string name="lblcel1">Celular: </string>
    <string name="lblcel2">Celular  </string>
    <string name="lbldir1">Direccion: </string>
    <string name="lbldir2">Direccion  </string>
    <string name="lblcode1">Codeudor: </string>
    <string name="lblcode2">Codeudor  </string>
    <string name="lblobs1">Observacion: </string>
    <string name="lblobs2">Observacion  </string>
    <string name="lblidcob">Id Cobrador: </string>
    <string name="lblidcob1">Id Cobrador </string>
    <string name="lblcob1">Cobrador: </string>
    <string name="lblcob2">Cobrador  </string>
    <string name="lblcedcob1">Cedula: </string>
    <string name="lblcedcob2">Cedula </string>
    <string name="lblcelcob1">Celular: </string>
    <string name="lblcelcob2">Celular  </string>
    <string name="lbldircob1">Direccion: </string>
    <string name="lbldircob2">Direccion  </string>
    <string name="lblidmerc">Id: </string>
    <string name="lblidmerc1">Id Mercancia </string>
    <string name="lbldesc">Descripcion: </string>
    <string name="lbldesc1">Descripcion </string>
    <string name="lblprecioc">Costo Compra: </string>
    <string name="lblprecioc1">Costo Compra</string>
    <string name="lblpreciov">Costo Venta: </string>
    <string name="lblpreciov1">Costo Venta </string>
    <string name="lblcantidad">Cantidad: </string>
    <string name="lblcantidad1">Cantidad</string>
    <string name="lblsaldo">Saldo: </string>
    <string name="lblsaldo1">Saldo</string>
    <string name="lbliduser">Id Usuario:</string>
    <string name="lbliduser1">Id Usuario</string>
    <string name="lbluser">Usuario:</string>
    <string name="lbluser1">Usuario</string>
    <string name="lblperfil">Perfil:</string>
    <string name="lblperfil1">Perfil</string>
    <string name="lblpermisos">Permisos:</string>
    <string name="lblpermisos1">Permisos</string>
    <string name="lblsuc">Sucursal:</string>
    <string name="lblsuc1">Sucursal</string>
    <string name="lblidvd">Id Vendedor: </string>
    <string name="lblidvd1">Id Vendedor </string>
    <string name="lblvd1">Vendedor: </string>
    <string name="lblvd2">Vendedor  </string>
    <string name="lblcedvd1">Cedula: </string>
    <string name="lblcedvd2">Cedula </string>
    <string name="lblcelvd1">Celular: </string>
    <string name="lblcelvd2">Celular  </string>
    <string name="lbldirvd1">Direccion: </string>
    <string name="lbldirvd2">Direccion  </string>
    <string name="new_task">Nueva Tarea</string>
    <string name="description">Descripción:</string>
    <string name="date">Fecha:</string>
    <string name="priority">Prioridad:</string>
    <string name="hint_description">Ingrese la descripción</string>
    <string name="hint_date">Seleccione una fecha</string>
    <string name="hora_recordatorio">Hora:</string>
    <string name="hint_hora">Seleccione una hora</string>
    <string name="repetir">Repetir:</string>
    <string name="cada_dias">Cada cuántos días:</string>
    <string name="hint_dias">Ej. 30</string>
    <string name="close">Cerrar</string>
    <string name="clear">Limpiar</string>
    <string name="save">Guardar</string>
    <string name="txtcliente">Cliente</string>
    <string name="txtid">Cedula</string>
    <string name="txtidcl">Id Cliente</string>
    <string name="txtcelular">Celular</string>
    <string name="txtdir">Direccion</string>
    <string name="txtcodeudor">Codeudor</string>
    <string name="txtcelcodeudor">Cel Codeudor</string>
    <string name="txtobservacion">Observacion</string>
    <string name="txtcliente1">Cliente</string>
    <string name="txtid1">Documento</string>
    <string name="txtidcl1">Id Cliente</string>
    <string name="txtcelular1">Celular</string>
    <string name="txtdir1">Direccion</string>
    <string name="txtcodeudor1">Codeudor</string>
    <string name="txtcelcodeudor1">Celular</string>
    <string name="txtobservacion1">Observacion</string>
    <string name="txtcobrador">Cobrador</string>
    <string name="txtidcob">Id Cobrador</string>
    <string name="txtcedcob">Cedula</string>
    <string name="txtcelcob">Celular</string>
    <string name="txtdircob">Direccion</string>
    <string name="txtcobrador1">Cobrador</string>
    <string name="txtidcob1">Id Cobrador</string>
    <string name="txtcedcob1">Cedula</string>
    <string name="txtcelcob1">Celular</string>
    <string name="txtdircob1">Direccion</string>
    <string name="txtidmerc">Id Mercancia</string>
    <string name="txtidmerc1">Id Mercancia</string>
    <string name="txtdesc">Descripcion</string>
    <string name="txtdesc1">Descripcion</string>
    <string name="txtprecioc">Costo Compra</string>
    <string name="txtprecioc1">Costo Compra</string>
    <string name="txtpreciov">Costo Venta</string>
    <string name="txtpreciov1">Costo Venta</string>
    <string name="txtcantidad">Cantidad</string>
    <string name="txtcantidad1">Precio Venta</string>
    <string name="txtiduser">Id Usuario</string>
    <string name="txtiduser1">Id Usuario</string>
    <string name="txtclave">Clave</string>
    <string name="txtclave1">Clave</string>
    <string name="txtcclave">Confirmar Clave</string>
    <string name="txtcclave1">Confirmar Clave</string>
    <string name="txtuser">Usuario</string>
    <string name="txtuser1">Usuario</string>
    <string name="txtperfil">Perfil</string>
    <string name="txtperfil1">Perfil</string>
    <string name="txtpermisos">Permisos</string>
    <string name="txtpermisos1">Permisos</string>
    <string name="txtsuc">Sucursal</string>
    <string name="txtsuc1">Sucursal</string>
    <string name="txtvendedor">Vendedor</string>
    <string name="txtidvd">Id Vendedor</string>
    <string name="txtcedvd">Cedula</string>
    <string name="txtcelvd">Celular</string>
    <string name="txtdirvd">Direccion</string>
    <string name="txtvendedor1">Vendedor</string>
    <string name="txtidvd1">Id Vendedor</string>
    <string name="txtcedvd1">Cedula</string>
    <string name="txtcelvd1">Celular</string>
    <string name="txtdirvd1">Direccion</string>
    <string name="txtsubt">Subtotal</string>
    <string name="txtinicial">C.Inicial</string>
    <string name="txtfinicial">F. Inicial</string>
    <string name="txtcant">Cantidad</string>
    <string name="txtfcobro">F. Cobro</string>
    <string name="txtfcuota">F. Cuota</string>
    <string name="txtfpago">Forma de Pago</string>
    <string name="txtprecio">Precio</string>
    <string name="txtsaldo">Saldo</string>
    <string name="txtvpagado">Valor Pagado</string>
    <string name="txtventat">Total Venta</string>
    <string name="btregistrar">Registrar</string>
    <string name="btbuscar">Buscar</string>
    <string name="btactualizar">Actualizar</string>
    <string name="bteliminar">Eliminar</string>
    <string name="buscar_clientes">Buscar Cliente</string>
    <string name="buscar_lista_clientes">Lista de Clientes</string>
    <string name="clientes">Clientes</string>
    <string name="ncliente">Nuevo Cliente</string>
    <string name="ncobrador">Nuevo Cobrador</string>
    <string name="inicio">Inicio</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="pagos">Pagos</string>
    <string name="salir">Salir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="options_perfiles">
        <item> </item>
        <item>Administrador</item>
        <item>Cobrador</item>
        <item>Vendedor</item>
    </string-array>
    <string-array name="options_fpago">
        <item> </item>
        <item>Mensual</item>
        <item>Semanal</item>
        <item>Quincenal</item>
    </string-array>
    <string-array name="options_fpago1">
        <item>Contado</item>
        <item>Credito</item>
    </string-array>
    <string-array name="options_refpago">
        <item>Cuota Normal</item>
        <item>Cuota Inicial</item>
    </string-array>
</resources>