<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_clientes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientesFragment">


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/titulo1"
    android:gravity="center"
    android:textSize="20sp"
    android:textStyle="bold"/>

    <EditText
        android:id="@+id/lblcliente"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/txtcliente"
        android:inputType="text"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtid"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:hint="@string/txtid"
        android:maxLength="10"
        android:inputType="number"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtcelular"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:hint="@string/txtcelular"
        android:maxLength="10"
        android:inputType="number"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtdir"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/txtdir"
        android:inputType="text"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtcodeudor"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/txtcodeudor"
        android:inputType="text"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtcelcodeudor"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:hint="@string/txtcelcodeudor"
        android:inputType="number"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtobservacion"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:elegantTextHeight="true"
        android:hint="@string/txtobservacion"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:overScrollMode="always"
        tools:ignore="Autofill" />

    <ImageButton
        android:id="@+id/btregistrar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:background="@null"
        android:gravity="center"
        android:contentDescription="@string/lbleditar"
        android:scaleType="centerCrop"
        android:src="@drawable/aceptar"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>