<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_nuevo_cobrador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoCobradorFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo8"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtcobrador"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/txtcobrador"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/txtcedcob"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:hint="@string/txtid"
        android:maxLength="10"
        android:inputType="number"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/txtcelcob"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:hint="@string/txtcelular"
        android:maxLength="10"
        android:inputType="number"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/txtdircob"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/txtdir"
        android:inputType="text"
        tools:ignore="Autofill" />
    <ImageButton
        android:id="@+id/btregistrar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:background="@null"
        android:gravity="center"
        android:contentDescription="@string/lbleditar"
        android:scaleType="centerCrop"
        android:src="@drawable/aceptar"/>

</LinearLayout>