<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buscar_clientes_list"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblidcl"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtidcl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="@string/lblidcl1"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblced1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtid1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="@string/lblced2"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblcl1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtcliente1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="@string/lblcl2"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblcel1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtcelular1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblcel2"
            android:textSize="17sp"
            android:layout_weight=".8" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lbldir1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtdir1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbldir2"
            android:textSize="17sp"
            android:layout_weight=".8" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblcode1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtcodeudor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="@string/lblcode2"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblcel1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtcelcodeudor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblcel2"
            android:textSize="17sp"
            android:layout_weight=".8" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblobs1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtobservacion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblobs2"
            android:textSize="17sp"
            android:layout_weight=".8" />
    </LinearLayout>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="11dp"
        android:background="@color/black" />
</LinearLayout>