<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vendedores_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblidvd"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtidvd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="@string/lblidvd1"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblcedcob1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtcedvd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="@string/lblcedcob2"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblcob1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtvendedor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="@string/lblcob2"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lblcelcob1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtcelvd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblcelcob2"
            android:textSize="17sp"
            android:layout_weight=".8" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lbldircob1"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtdirvd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbldircob2"
            android:textSize="17sp"
            android:layout_weight=".8" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/bteditarvd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="51dp"
            android:background="@null"
            android:contentDescription="@string/lbleditar"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/editarproveedor" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="11dp"
        android:background="@color/black" />
</LinearLayout>